--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,12 @@ clap = "4.5.31"
 async-trait = "0.1.83"
 bcs = "0.1.6"
 url = "2.5.4"
+prometheus = "0.13.4"
+tokio-util = "0.7.13"
+
+sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
+mysten-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
+telemetry-subscribers = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
+sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
+move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
+sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
