--- a/crates/mvr-api/Cargo.toml
+++ b/crates/mvr-api/Cargo.toml
@@ -5,18 +5,14 @@ edition = "2021"
 
 [dependencies]
 sui-package-resolver = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
-move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
-sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
-sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
-
 async-graphql = { version = "7.0.15", features = ["dataloader", "boxed-trait"] }
-
 axum = "0.8.1"
 tokio = { version = "1.43.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
 regex = "1.11.1"
 rand = "0.9.0"
 futures = "0.3.31"
+
 serde = { workspace = true, features = ["derive"] }
 diesel = { workspace = true, features = ["serde_json"] }
 diesel-async = { workspace = true, features = ["bb8", "postgres"] }
@@ -30,8 +26,17 @@ tracing.workspace = true
 url.workspace = true
 bcs.workspace = true
 clap = { workspace = true, features = ["derive", "env"] }
+sui-pg-db.workspace = true
+prometheus.workspace = true
+sui-indexer-alt-metrics.workspace = true
+mysten-metrics.workspace = true
+move-core-types.workspace = true
+sui-types.workspace = true
+telemetry-subscribers.workspace = true
+tokio-util.workspace = true
 mvr-types = { path = "../mvr-types" }
 mvr-schema = { path = "../mvr-schema" }
+
 
 [[bin]]
 name = "mvr-api"
