--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ dotenvy = "0.15.7"
 chrono = "0.4.39"
 diesel = "2.2.7"
 diesel-async = "0.5.2"
+diesel_migrations = "2.2.0"
 anyhow = "1.0.95"
 thiserror = "2.0.11"
 once_cell = "1.20.3"
