--- a/crates/mvr-schema/Cargo.toml
+++ b/crates/mvr-schema/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 sui-field-count = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84"}
 diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
+diesel_migrations.workspace = true
 dotenvy = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
