--- a/crates/mvr-indexer/Cargo.toml
+++ b/crates/mvr-indexer/Cargo.toml
@@ -11,13 +11,12 @@ tokio = "1.38.0"
 futures = "0.3.31"
 sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
 sui-config = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
-sui-move-build = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
 sui-data-ingestion-core = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
 fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
+reqwest = { version = "^0.12", features = ["blocking", "json"] }
 
-
-move-binding-derive = { git = "https://github.com/MystenLabs/move-binding.git", rev = "1fb0964b" }
-move-types = { git = "https://github.com/MystenLabs/move-binding.git", rev = "1fb0964b" }
+move-binding-derive = { git = "https://github.com/MystenLabs/move-binding.git", rev = "227897dd" }
+move-types = { git = "https://github.com/MystenLabs/move-binding.git", rev = "227897dd" }
 
 sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types", features = ["serde"], rev = "86a9e06" }
 sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "86a9e06" }
@@ -51,8 +50,19 @@ telemetry-subscribers.workspace = true
 tokio-util.workspace = true
 
 [dev-dependencies]
+sui-indexer-alt-jsonrpc = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
+sui-indexer-alt = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
+sui-rpc-api = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
+sui-storage = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
+sqlx = {version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"]}
+prettytable = "0.10.0"
+diffy = "0.4.2"
+fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
 
 [[bin]]
 name = "mvr-indexer"
 path = "src/main.rs"
 
+[[example]]
+name = "download-checkpoint"
+path = "examples/download_checkpoint.rs"
