--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -24,7 +24,15 @@ jobs:
 
       - uses: taiki-e/install-action@cargo-nextest
 
-      - name: Build mvr-cli (debug)
+      - name: Install postgres
+        shell: bash
+        run: |
+          sudo apt update && sudo apt install postgresql
+
+      - name: Add postgres to PATH
+        run: echo "/usr/lib/postgresql/16/bin" >> $GITHUB_PATH
+
+      - name: Build mvr (debug)
         run: |
           cargo build -p mvr
           echo "$(pwd)/target/debug" >> $GITHUB_PATH
@@ -32,6 +40,11 @@ jobs:
       - name: Run mvr-cli tests
         run: |
           cd crates/mvr-cli
+          cargo nextest run
+
+      - name: Run mvr-indexer tests
+        run: |
+          cd crates/mvr-indexer
           cargo nextest run
 
       - name: Get Sui releases JSON file
