--- a/crates/mvr-indexer/Cargo.toml
+++ b/crates/mvr-indexer/Cargo.toml
@@ -56,8 +56,8 @@ sui-rpc-api = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
 sui-storage = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
 sqlx = {version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"]}
 prettytable = "0.10.0"
-diffy = "0.4.2"
 fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
+insta = "1.42.2"
 
 [[bin]]
 name = "mvr-indexer"
