--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -10,6 +10,36 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  diff:
+    runs-on: [ ubuntu-latest ]
+    outputs:
+      isRust: ${{ steps.diff.outputs.isRust }}
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - name: Detect Changes
+        uses: './.github/actions/diffs'
+        id: diff
+
+  test-indexer:
+    name: test-indexer
+    runs-on: ubuntu-latest
+    needs: diff
+    if: needs.diff.outputs.isRust == 'true'
+    steps:
+      - uses: taiki-e/install-action@cargo-nextest
+      - name: Install postgres
+        shell: bash
+        run: |
+          sudo apt update && sudo apt install postgresql
+
+      - name: Add postgres to PATH
+        run: echo "/usr/lib/postgresql/16/bin" >> $GITHUB_PATH
+
+      - name: Run mvr-indexer tests
+        run: |
+          cd crates/mvr-indexer
+          cargo nextest run
+
   build:
     runs-on: ubuntu-latest
     continue-on-error: true
@@ -24,15 +54,7 @@ jobs:
 
       - uses: taiki-e/install-action@cargo-nextest
 
-      - name: Install postgres
-        shell: bash
-        run: |
-          sudo apt update && sudo apt install postgresql
-
-      - name: Add postgres to PATH
-        run: echo "/usr/lib/postgresql/16/bin" >> $GITHUB_PATH
-
-      - name: Build mvr (debug)
+      - name: Build mvr-cli (debug)
         run: |
           cargo build -p mvr
           echo "$(pwd)/target/debug" >> $GITHUB_PATH
@@ -40,11 +62,6 @@ jobs:
       - name: Run mvr-cli tests
         run: |
           cd crates/mvr-cli
-          cargo nextest run
-
-      - name: Run mvr-indexer tests
-        run: |
-          cd crates/mvr-indexer
           cargo nextest run
 
       - name: Get Sui releases JSON file
@@ -93,3 +110,12 @@ jobs:
         run: |
           chmod +x ./ci/integration_test.sh
           ./ci/integration_test.sh
+
+  rustfmt:
+    needs: diff
+    if: needs.diff.outputs.isRust == 'true'
+    runs-on: [ ubuntu-latest ]
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - run: rustup component add rustfmt
+      - run: cargo fmt --check
