--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -1,15 +1,43 @@
-name: mvr-cli Rust CI
+name: Rust
 
 on:
   push:
     branches: ["main"]
+    paths:
+      - crates/**
+      - .github/workflows/rust-ci.yml
+      - Cargo.lock
+      - Cargo.toml
   pull_request:
     branches: ["main"]
+    paths:
+      - crates/**
+      - .github/workflows/rust-ci.yml
+      - Cargo.lock
+      - Cargo.toml
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  test-indexer:
+    name: test-indexer
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: taiki-e/install-action@cargo-nextest
+      - name: Install postgres
+        shell: bash
+        run: |
+          sudo apt update && sudo apt install postgresql
+
+      - name: Add postgres to PATH
+        run: echo "/usr/lib/postgresql/16/bin" >> $GITHUB_PATH
+
+      - name: Run mvr-indexer tests
+        run: |
+          cargo nextest run -E 'package(mvr-indexer)'
+
   build:
     runs-on: ubuntu-latest
     continue-on-error: true
@@ -80,3 +108,10 @@ jobs:
         run: |
           chmod +x ./ci/integration_test.sh
           ./ci/integration_test.sh
+
+  rustfmt:
+    runs-on: [ ubuntu-latest ]
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - run: rustup component add rustfmt
+      - run: cargo fmt --check
