--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ members = [
 serde = "1.0.217"
 serde_json = "1.0.138"
 dotenvy = "0.15.7"
-chrono = "0.4.39"
+chrono = { version = "=0.4.39", features = ["clock", "serde"] }
 diesel = "2.2.7"
 diesel-async = "0.5.2"
 diesel_migrations = "2.2.0"
@@ -28,9 +28,9 @@ url = "2.5.4"
 prometheus = "0.13.4"
 tokio-util = "0.7.13"
 
-sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
-mysten-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
-telemetry-subscribers = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
-sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
-move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
-sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
+sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
+mysten-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
+telemetry-subscribers = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
+sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
+move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
+sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
