--- a/crates/mvr-api/Cargo.toml
+++ b/crates/mvr-api/Cargo.toml
@@ -38,6 +38,10 @@ tokio-util.workspace = true
 mvr-types = { path = "../mvr-types" }
 mvr-schema = { path = "../mvr-schema" }
 
+[dev-dependencies]
+sui-move-build = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
+move-binary-format = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
+reqwest = { version = "0.12.11", features = ["json"] }
 
 [[bin]]
 name = "mvr-api"
