--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -20,8 +20,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  test-indexer:
-    name: test-indexer
+  test-crates:
+    name: test-crates
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
