[api] Test API resolution endpoints (#150)
* Tests all resolution endpoints, scaffolds a test cluster

* fmt

* add mvr-api tests to the CI..

* rename

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -20,8 +20,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  test-indexer:
-    name: test-indexer
+  test-crates:
+    name: test-crates
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -37,6 +37,10 @@ jobs:
       - name: Run mvr-indexer tests
         run: |
           cargo nextest run -E 'package(mvr-indexer)'
+
+      - name: Run mvr-api tests
+        run: |
+          cargo nextest run -E 'package(mvr-api)'
 
   build:
     runs-on: ubuntu-latest
