--- a/crates/mvr-cli/Cargo.toml
+++ b/crates/mvr-cli/Cargo.toml
@@ -19,7 +19,6 @@ name = "unit_tests"
 path = "src/tests/unit_tests.rs"
 
 [dependencies]
-sui-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types", rev="86a9e06"}
 sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client", rev="86a9e06"}
 bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version", rev = "42ba6c0" }
 
@@ -41,6 +40,12 @@ once_cell.workspace = true
 anyhow.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+
+# MVR Types
+mvr-types = { path = "../mvr-types" }
+
+# Rust SDK
+sui-sdk-types.workspace = true
 
 [build-dependencies]
 sui-client-build = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client-build"}
