[cli] Enable omitting --network flag when already set

--- a/crates/mvr-cli/Cargo.toml
+++ b/crates/mvr-cli/Cargo.toml
@@ -52,3 +52,4 @@ sui-client-build = { git = "https://github.com/mystenlabs/sui-rust-sdk", package
 
 [dev-dependencies]
 expect-test = "1.5.0"
+insta = "1.42.2"
