clean up... migrate to new api... clean up...

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ bcs = "0.1.6"
 url = "2.5.4"
 prometheus = "0.13.4"
 tokio-util = "0.7.13"
+futures = "0.3.31"
 
 # Main Sui Mono-repo
 sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
