--- a/crates/mvr-api/Cargo.toml
+++ b/crates/mvr-api/Cargo.toml
@@ -12,8 +12,8 @@ tokio = { version = "1.43.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
 regex = "1.11.1"
 rand = "0.9.0"
-futures = "0.3.31"
 
+futures.workspace = true
 serde = { workspace = true, features = ["derive"] }
 diesel = { workspace = true, features = ["serde_json"] }
 diesel-async = { workspace = true, features = ["bb8", "postgres"] }
