--- a/crates/mvr-cli/Cargo.toml
+++ b/crates/mvr-cli/Cargo.toml
@@ -16,10 +16,9 @@ path = "src/lib.rs"
 
 [[test]]
 name = "unit_tests"
-path = "src/tests/unit_tests.rs"
+path = "tests/unit_tests.rs"
 
 [dependencies]
-sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client", rev="86a9e06"}
 bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version", rev = "42ba6c0" }
 
 clap = { workspace = true, features = ["derive"] }
@@ -27,28 +26,19 @@ reqwest = { version = "0.12", default-features = false, features = ["json", "rus
 tempfile = "3.13"
 tokio = { version = "1.40.0", features = ["full"] }
 toml_edit = "0.22"
-toml = "0.8"
 regex = "1.11"
 yansi = "1.0"
-comfy-table = "7.1"
 dirs = "6.0.0"
-serde_yml = "0.0.11"
-base64ct = "1.6.0"
-url.workspace = true
-bcs.workspace = true
-once_cell.workspace = true
 anyhow.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+futures.workspace = true
 
 # MVR Types
 mvr-types = { path = "../mvr-types" }
 
 # Rust SDK
 sui-sdk-types.workspace = true
-
-[build-dependencies]
-sui-client-build = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client-build"}
 
 [dev-dependencies]
 expect-test = "1.5.0"
