--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -53,6 +53,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # Install PNPM for our integration tests
+      - uses: pnpm/action-setup@a3252b78c470c02df07e9d59298aecedc3ccdd6d # pin@v3.0.0
+        with:
+          version: 9.1.1
+
+      # Install NodeJS for our integration tests
+      - name: Install Nodejs
+        uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # pin@v4.0.2
+        with:
+          node-version: '20'
+
       - name: rust version
         run: |
           rustc --version
@@ -112,10 +123,9 @@ jobs:
           active_address: "0x14e7ac25259adcc373c96627893976d4fe562a3f3fedce493fc187c5ebd53eee"
           EOF
 
-      - name: Run custom integration test
+      - name: Run mvr-cli integration tests
         run: |
-          chmod +x ./ci/integration_test.sh
-          ./ci/integration_test.sh
+          cd ci && pnpm install && pnpm test
 
   rustfmt:
     runs-on: [ ubuntu-latest ]
