Add snapshot tests for some lookups

--- a/crates/mvr-api/Cargo.toml
+++ b/crates/mvr-api/Cargo.toml
@@ -35,7 +35,7 @@ move-core-types.workspace = true
 sui-types.workspace = true
 telemetry-subscribers.workspace = true
 tokio-util.workspace = true
-sui-sdk-types.workspace = true
+sui-sdk-types = { workspace = true, features = ["serde"] }
 mvr-types = { path = "../mvr-types" }
 mvr-schema = { path = "../mvr-schema" }
 
@@ -43,6 +43,7 @@ mvr-schema = { path = "../mvr-schema" }
 sui-move-build = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
 move-binary-format = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
 reqwest = { version = "0.12.11", features = ["json"] }
+insta = "1.42.2"
 
 [[bin]]
 name = "mvr-api"
