--- a/crates/mvr-api/Cargo.toml
+++ b/crates/mvr-api/Cargo.toml
@@ -44,6 +44,7 @@ mvr-schema = { path = "../mvr-schema" }
 sui-move-build = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
 move-binary-format = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
 reqwest = { version = "0.12.11", features = ["json"] }
+insta = "1.42.2"
 
 [[bin]]
 name = "mvr-api"
