--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.5.4",
     "geist": "^1.3.0",
     "lucide-react": "^0.440.0",
