--- a/app/package.json
+++ b/app/package.json
@@ -40,6 +40,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.3",
     "react-syntax-highlighter": "^15.6.1",
     "smol-toml": "^1.3.0",
