--- a/app/package.json
+++ b/app/package.json
@@ -43,6 +43,7 @@
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.3",
     "react-syntax-highlighter": "^15.6.1",
+    "react-tooltip": "^5.28.1",
     "remark-gfm": "^4.0.1",
     "smol-toml": "^1.3.0",
     "sonner": "^1.5.0",
