--- a/app/package.json
+++ b/app/package.json
@@ -40,7 +40,11 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.3",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-tooltip": "^5.28.1",
+    "remark-gfm": "^4.0.1",
     "smol-toml": "^1.3.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
@@ -52,6 +56,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^9.10.0",
