--- a/app/package.json
+++ b/app/package.json
@@ -44,6 +44,7 @@
     "react-resizable-panels": "^2.1.3",
     "react-syntax-highlighter": "^15.6.1",
     "react-tooltip": "^5.28.1",
+    "recharts": "^2.15.3",
     "remark-gfm": "^4.0.1",
     "smol-toml": "^1.3.0",
     "sonner": "^1.5.0",
