--- a/crates/mvr-cli/Cargo.toml
+++ b/crates/mvr-cli/Cargo.toml
@@ -33,7 +33,7 @@ anyhow.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 futures.workspace = true
-
+thiserror.workspace = true
 # MVR Types
 mvr-types = { path = "../mvr-types" }
 
