--- a/crates/mvr-indexer/Cargo.toml
+++ b/crates/mvr-indexer/Cargo.toml
@@ -13,6 +13,7 @@ sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", rev
 sui-config = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
 sui-data-ingestion-core = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
 sui-rpc-api = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
+move-binary-format = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
 fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
 reqwest = { version = "^0.12", features = ["blocking", "json"] }
 
