Add test cases, improve snapshots by capturing stdout

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -114,6 +114,9 @@ jobs:
             - alias: mainnet
               rpc: "https://fullnode.mainnet.sui.io"
               ws: ~
+            - alias: devnet
+              rpc: "https://fullnode.devnet.sui.io"
+              ws: ~
           active_env: localnet
           active_address: "0x14e7ac25259adcc373c96627893976d4fe562a3f3fedce493fc187c5ebd53eee"
           EOF
