--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,12 @@ members = [
     "crates/mvr-indexer",
     "crates/mvr-schema",
     "crates/mvr-types",
-    "crates/mvr-api", 
+    "crates/mvr-api",
     "crates/ci-tests"
 ]
 
 [workspace.dependencies]
+tokio = "1.45.1"
 serde = "1.0.217"
 serde_json = "1.0.138"
 dotenvy = "0.15.7"
@@ -31,12 +32,12 @@ tokio-util = "0.7.13"
 futures = "0.3.31"
 
 # Main Sui Mono-repo
-sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
-mysten-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
-telemetry-subscribers = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
-sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
-move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
-sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
+sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
+mysten-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
+telemetry-subscribers = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
+sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
+move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
+sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
 
 # New Rust SDK
 sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types", rev="86a9e06"}
