--- a/crates/mvr-api/Cargo.toml
+++ b/crates/mvr-api/Cargo.toml
@@ -4,14 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sui-package-resolver = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
+sui-package-resolver = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
 async-graphql = { version = "=7.0.1", features = ["dataloader"] }
-async-graphql-value = "=7.0.1"
 axum = "0.8.1"
-tokio = { version = "1.43.0", features = ["full"] }
+tokio = { workspace = true, features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
-regex = "1.11.1"
-rand = "0.9.0"
 base64 = "0.22.1"
 
 futures.workspace = true
@@ -22,7 +19,6 @@ async-trait.workspace = true
 serde_json.workspace = true
 anyhow.workspace = true
 chrono.workspace = true
-once_cell.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 url.workspace = true
@@ -31,7 +27,6 @@ clap = { workspace = true, features = ["derive", "env"] }
 sui-pg-db.workspace = true
 prometheus.workspace = true
 sui-indexer-alt-metrics.workspace = true
-mysten-metrics.workspace = true
 move-core-types.workspace = true
 sui-types.workspace = true
 telemetry-subscribers.workspace = true
@@ -41,8 +36,8 @@ mvr-types = { path = "../mvr-types" }
 mvr-schema = { path = "../mvr-schema" }
 
 [dev-dependencies]
-sui-move-build = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
-move-binary-format = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
+sui-move-build = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
+move-binary-format = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
 reqwest = { version = "0.12.11", features = ["json"] }
 insta = "1.42.2"
 
