move all sui deps to workspace cleanup deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+
 [workspace]
 resolver = "2"
 
@@ -31,13 +32,18 @@ prometheus = "0.13.4"
 tokio-util = "0.7.13"
 futures = "0.3.31"
 
-# Main Sui Mono-repo
+# Sui dependencies
 sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
-mysten-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
 telemetry-subscribers = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
 sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
 move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
 sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
+sui-package-resolver = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
+sui-move-build = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
+move-binary-format = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
+sui-field-count = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
+bin-version = { git = "https://github.com/mystenlabs/sui", rev = "298d049" }
 
-# New Rust SDK
-sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types", rev="86a9e06"}
+# Sui SDK dependencies
+sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types", rev="86a9e06" }
+sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "86a9e06" }
