--- a/crates/mvr-indexer/Cargo.toml
+++ b/crates/mvr-indexer/Cargo.toml
@@ -45,3 +45,15 @@ sui-storage = { git = "https://github.com/MystenLabs/sui.git", rev = "298d049" }
 sqlx = {version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"]}
 fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
 insta = { version = "1.43.1", features = ["json"] }
+
+[[bin]]
+name = "mvr-indexer"
+path = "src/main.rs"
+
+[[example]]
+name = "download-checkpoint"
+path = "examples/download_checkpoint.rs"
+
+[[example]]
+name = "immediate-dependency-backfill"
+path = "examples/immediate_dependency_backfill.rs"
