--- a/crates/mvr-cli/Cargo.toml
+++ b/crates/mvr-cli/Cargo.toml
@@ -19,11 +19,11 @@ name = "unit_tests"
 path = "tests/unit_tests.rs"
 
 [dependencies]
-bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version", rev = "298d049" }
+bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version", rev = "197ebfbc1ff03d83f908e23281e7269b65cf350d" }
 
 clap = { workspace = true, features = ["derive"] }
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
-tempfile = "3.13"
+tempfile.workspace = true
 tokio = { workspace = true, features = ["full"] }
 toml_edit = "0.22"
 regex = "1.11"
