--- a/docker/mvr-indexer/Dockerfile
+++ b/docker/mvr-indexer/Dockerfile
@@ -12,6 +12,8 @@ COPY docker/mvr-indexer/entry.sh ./
 
 RUN apt-get update && apt-get install -y build-essential libssl-dev pkg-config curl cmake clang ca-certificates
 ENV PATH="/root/.cargo/bin:${PATH}"
+ENV RUSTFLAGS="--cfg tokio_unstable"
+ENV TOKIO_CONSOLE=1
 
 RUN cargo build --profile $PROFILE --bin mvr-indexer --config net.git-fetch-with-cli=true
 
