--- a/crates/mvr-cli/Cargo.toml
+++ b/crates/mvr-cli/Cargo.toml
@@ -19,7 +19,8 @@ name = "unit_tests"
 path = "tests/unit_tests.rs"
 
 [dependencies]
-bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version", rev = "0f91f6b" }
+bin-version = { git = "https://github.com/mystenlabs/sui", rev = "0f91f6b" }
+jsonrpc = { git = "https://github.com/mystenlabs/sui", rev = "0f91f6b" }
 
 clap = { workspace = true, features = ["derive"] }
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
