--- a/crates/mvr-api/Cargo.toml
+++ b/crates/mvr-api/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sui-package-resolver = { git = "https://github.com/MystenLabs/sui.git", rev = "0f91f6b" }
+sui-package-resolver.workspace = true
 async-graphql = { version = "=7.0.1", features = ["dataloader"] }
 axum = "0.8.1"
 tokio = { workspace = true, features = ["full"] }
@@ -36,10 +36,10 @@ mvr-types = { path = "../mvr-types" }
 mvr-schema = { path = "../mvr-schema" }
 
 [dev-dependencies]
-sui-move-build = { git = "https://github.com/MystenLabs/sui.git", rev = "0f91f6b" }
-move-binary-format = { git = "https://github.com/MystenLabs/sui.git", rev = "0f91f6b" }
+sui-move-build.workspace = true
+move-binary-format.workspace = true
 reqwest = { version = "0.12.11", features = ["json"] }
-insta = "1.42.2"
+insta.workspace = true
 
 [[bin]]
 name = "mvr-api"
