--- a/crates/mvr-cli/Cargo.toml
+++ b/crates/mvr-cli/Cargo.toml
@@ -19,7 +19,7 @@ name = "unit_tests"
 path = "tests/unit_tests.rs"
 
 [dependencies]
-bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version", rev = "0f91f6b" }
+bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version", rev = "3b96ab72dd5db2fb800837d6067bf45839178b62" }
 
 clap = { workspace = true, features = ["derive"] }
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
@@ -41,4 +41,4 @@ sui-sdk-types.workspace = true
 
 [dev-dependencies]
 expect-test = "1.5.0"
-insta = "1.42.2"
+insta.workspace = true
