--- a/crates/mvr-api/Cargo.toml
+++ b/crates/mvr-api/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 sui-package-resolver.workspace = true
-async-graphql = { version = "=7.0.1", features = ["dataloader"] }
+async-graphql.workspace = true
 axum = "0.8.1"
 tokio = { workspace = true, features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
