--- a/crates/mvr-cli/Cargo.toml
+++ b/crates/mvr-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mvr"
-version = "0.0.14"
+version = "0.1.0"
 edition = "2021"
 description = "MVR is a command line tool to interact with the Move Registry for the Sui network."
 license = "Apache-2.0"
@@ -14,15 +14,15 @@ path = "src/main.rs"
 name = "mvr"
 path = "src/lib.rs"
 
-[[test]]
-name = "unit_tests"
-path = "tests/unit_tests.rs"
-
 [dependencies]
 bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version", rev = "3b96ab72dd5db2fb800837d6067bf45839178b62" }
+jsonrpc.workspace = true
 
 clap = { workspace = true, features = ["derive"] }
-reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", default-features = false, features = [
+    "json",
+    "rustls-tls",
+] }
 tempfile.workspace = true
 tokio = { workspace = true, features = ["full"] }
 toml_edit = "0.22"
@@ -37,7 +37,7 @@ thiserror.workspace = true
 mvr-types = { path = "../mvr-types" }
 
 # Rust SDK
-sui-sdk-types.workspace = true
+sui-sdk-types = { workspace = true, features = ["serde"] }
 
 [dev-dependencies]
 expect-test = "1.5.0"
